--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
 <body>
   <div id="app"></div>
+  <script>
+    // 这段代码要放在其他js的前面
+    (function () {
+      var redirect = sessionStorage.redirect;
+      delete sessionStorage.redirect;
+      if (redirect && redirect != location.href) {
+        history.replaceState(null, null, redirect);
+      }
+    })();
+  </script>
   <script type="module" src="/src/main.js"></script>
 </body>
 
