--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml"
-    href="https://cdn.jsdelivr.net/gh/LPTFF/lptff.github.io@gh-pages/img/logo.jpg" />
+  <link rel="icon" type="image/svg+xml" href="./src/public/img/logo.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>随风而逝</title>
 </head>
