--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/public/img/logo.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>随风而逝</title>
-    <meta name="description" content="这是一个开源的个人网站" />
-  </head>
 
-  <body>
-    <div id="app"></div>
-    <script type="module" src="src/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./src/public/img/logo.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>随风而逝</title>
+  <meta name="description" content="这是一个开源的个人网站" />
+</head>
+
+<body>
+  <div id="app">
+  </div>
+  <script type="module" src="src/main.js"></script>
+</body>
+
 </html>
